# bootstrapper

./: .gitignore  LICENSE  README.md  bootstrapper.py  pyproject.toml
scripts/: config.py
