[project]
name = 'bootstrapper'

[tool.basedpyright]
strict = ['bootstrapper.py', 'scripts/config.py']
typeCheckingMode = 'basic'

[tool.pixi.workspace]
channels = ['conda-forge']
platforms = ['win-64']

[tool.pixi.dependencies]
pooch = '>=1.8.2'
python-freethreading = '*'
rich = '>=9.12.0'

[tool.pixi.target.win.dependencies]
colorama = '*'

[tool.pixi.pypi-dependencies]
pylnk3 = '*'

[tool.pixi.pypi-dependencies.tqdm]
git = 'ssh://git@github.com/klamike/tqdm'
branch = 'mk/update_tqdmrich'

[tool.pixi.environments.gil]
features = ['gil']
no-default-feature = true

[tool.pixi.feature.gil.dependencies]
pydantic-settings = '>=2.3.0'
python = '>=3.12.0'
py-rattler = '*'

[tool.pixi.feature.gil.tasks.install]
cmd = 'true'

[tool.pixi.tasks.start]
cmd = 'python bootstrapper.py'
depends-on = ['install']

[[tool.bootstrapper.win-64.files]]
# update = 'https://www.nirsoft.net/pad/controlmymonitor.xml'
url = 'https://www.nirsoft.net/utils/controlmymonitor.zip'
exposed = { ControlMyMonitor = 'ControlMyMonitor.exe' }

[[tool.bootstrapper.win-64.files]]
# update = 'https://api.github.com/repos/Chuyu-Team/Dism-Multi-language/releases/latest'
url = 'https://dl.lancdn.com/landian/soft/dism/Dism++10.1.1002.1B.zip'
exposed = { 'Dism++' = 'Dism++x64.exe' }
lnk = true

[[tool.bootstrapper.win-64.files]]
# update = 'https://www.voidtools.com/zh-cn/downloads/'
url = 'https://www.voidtools.com/Everything-1.4.1.1030.x64.zip'
known-hash = 'c1a1bf4e2b87addb5ce662c3835cee8cfc2738396906b3544d589502d54a08be'
exposed = { Everything = 'everything.exe' }
lnk = true

[[tool.bootstrapper.win-64.files]]
# update = 'https://github.com/microsoft/winget-pkgs/tree/master/manifests/t/TechPowerUp/NVCleanstall'
url = 'https://us2-dl.techpowerup.com/files/NVCleanstall_1.19.0.exe'
known-hash = '9dd36ef956af927cf41fa441f91b329a7973e13965e4e7d70e6fa9c1df1cade6'
headers = { User-Agent = 'winget-cli WindowsPackageManager/1.9.25200 DesktopAppInstaller/Microsoft.DesktopAppInstaller v1.24.25200.0' }
exposed = { NVCleanstall = 'NVCleanstall_1.19.0.exe' }

[[tool.bootstrapper.win-64.files]]
# update = 'https://api.github.com/repos/microsoft/PowerToys/releases/latest'
url = 'https://mirror.nju.edu.cn/github-release/microsoft/PowerToys/LatestRelease/PowerToysSetup-0.95.1-x64.exe'
known-hash = '3c604b200a1e4637aff98a4129286d309a7de6e07aa1fde77e268bc85363570c'
