[project]
name = 'bootstrapper'
version = '0.1.0'

[tool.basedpyright]
reportUnnecessaryTypeIgnoreComment = 'warning'
strict = ['bootstrapper.py']
typeCheckingMode = 'off'

[tool.pixi.workspace]
channels = ['conda-forge']
platforms = ['win-64']

[tool.pixi.dependencies]
pooch = '>=1.9.0'
pydantic-settings = '>=2.12.0'
python-freethreading = '>=3.14.0'
rich = '>=14.2.0'

[tool.pixi.target.win.dependencies]
colorama = '*'

[tool.pixi.pypi-dependencies]
pylnk3 = '*'
tqdm = { git = 'https://github.com/klamike/tqdm', branch = 'mk/update_tqdmrich' }

[tool.pixi.tasks]
bootstrap = 'python bootstrapper.py {{ pixi.platform }}'

[[tool.bootstrapper.win-64.files]]
# update = 'https://api.github.com/repos/Chuyu-Team/Dism-Multi-language/releases/latest'
url = 'https://mirrors.sdu.edu.cn/github-release/Chuyu-Team_Dism-Multi-language/v10.1.1002.2/Dism++10.1.1002.1B.zip'
exposed = { 'Dism++' = 'Dism++x64.exe' }
lnk = true

[[tool.bootstrapper.win-64.files]]
# update = 'https://packages.msys2.org/packages/mingw-w64-ucrt-x86_64-dnscrypt-proxy'
url = 'https://mirror.nju.edu.cn/msys2/mingw/ucrt64/mingw-w64-ucrt-x86_64-dnscrypt-proxy-2.1.17-1-any.pkg.tar.zst'
known-hash = '1c54dd83832368037cc4ac5df7239fb9f289fca7b9f82563983d0004dd5c1092'
exposed = { dnscrypt-proxy = 'dnscrypt-proxy.exe' }

[[tool.bootstrapper.win-64.files]]
# update = 'https://www.voidtools.com/zh-cn/downloads/'
url = 'https://www.voidtools.com/Everything-1.4.1.1032.x64.zip'
known-hash = '698df475ec44e638f66f1b6a32d28fea613cec78d3b6310e6abe53431eeb940c'
exposed = { Everything = 'everything.exe' }
lnk = true

[[tool.bootstrapper.win-64.files]]
# update = 'https://github.com/microsoft/winget-pkgs/tree/master/manifests/t/TechPowerUp/NVCleanstall'
url = 'https://closest-dl.techpowerup.com/files/NVCleanstall_1.19.0.exe'
known-hash = '9dd36ef956af927cf41fa441f91b329a7973e13965e4e7d70e6fa9c1df1cade6'
headers = { User-Agent = 'winget-cli WindowsPackageManager/1.9.25200 DesktopAppInstaller/Microsoft.DesktopAppInstaller v1.24.25200.0' }
exposed = { NVCleanstall = 'NVCleanstall_1.19.0.exe' }
